# TDD---kalkulator

./: .gitignore  CMakeLists.txt
include/: BitwiseDisplay.hpp  Calculator.hpp  MainWindow.hpp
src/: BitwiseDisplay.cpp  Calculator.cpp  MainWindow.cpp  main.cpp
tests/: TestCalculator.cpp  TestOverflow.cpp
